--- a/404.html
+++ b/404.html
@@ -83,7 +83,7 @@
 						<div class="mistake__title">404</div>
 						<div class="mistake__subtitle">Упс.. что то сломалось</div>
 						<div class="mistake__btns btns">
-							<a href="" class="mistake__btn btn btn-white">
+							<a href="index.html" class="mistake__btn btn btn-white">
 								<span>Вернуться на главную</span>
 							</a>
 							<a href="" class="mistake__btn2 btn btn-green--arrow">
