--- a/vacancies.html
+++ b/vacancies.html
@@ -116,12 +116,12 @@
 									</nav>
 								</div>
 								<div class="vacancies__btns">
-									<button class="vacancies__btn">Откликнуться на вакансию</button>
-									<button class="vacancies__btn2 btn btn-black--arrow">
+									<a href="#form-wrap" class="vacancies__btn">Откликнуться на вакансию</a>
+									<a href="#form-wrap" class="vacancies__btn2 btn btn-black--arrow">
 										<svg width="16" height="8" viewBox="0 0 16 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path d="M14.6728 2.74632L12.3508 0.400318C12.295 0.344081 12.2286 0.299445 12.1555 0.268983C12.0824 0.238522 12.004 0.222839 11.9248 0.222839C11.8456 0.222839 11.7672 0.238522 11.694 0.268983C11.6209 0.299445 11.5546 0.344081 11.4988 0.400318C11.387 0.512736 11.3243 0.664807 11.3243 0.823318C11.3243 0.98183 11.387 1.1339 11.4988 1.24632L13.6348 3.40032H1.40078C1.24165 3.40032 1.08904 3.46353 0.976517 3.57605C0.863995 3.68858 0.800781 3.84119 0.800781 4.00032C0.800781 4.15945 0.863995 4.31206 0.976517 4.42458C1.08904 4.5371 1.24165 4.60032 1.40078 4.60032H13.6708L11.4988 6.76632C11.4425 6.8221 11.3979 6.88846 11.3674 6.96157C11.337 7.03469 11.3213 7.11311 11.3213 7.19232C11.3213 7.27153 11.337 7.34995 11.3674 7.42306C11.3979 7.49618 11.4425 7.56254 11.4988 7.61832C11.5546 7.67456 11.6209 7.71919 11.694 7.74965C11.7672 7.78012 11.8456 7.7958 11.9248 7.7958C12.004 7.7958 12.0824 7.78012 12.1555 7.74965C12.2286 7.71919 12.295 7.67456 12.3508 7.61832L14.6728 5.29032C15.0099 4.95282 15.1992 4.49532 15.1992 4.01832C15.1992 3.54132 15.0099 3.08382 14.6728 2.74632Z" fill="#282827"/>
 										</svg>
-									</button>
+									</a>
 								</div>
 							</div>
 							<div class="vacancies__group">
@@ -150,12 +150,12 @@
 									</nav>
 								</div>
 								<div class="vacancies__btns">
-									<button class="vacancies__btn">Откликнуться на вакансию</button>
-									<button class="vacancies__btn2 btn btn-black--arrow">
+									<a href="#form-wrap" class="vacancies__btn">Откликнуться на вакансию</a>
+									<a href="#form-wrap" class="vacancies__btn2 btn btn-black--arrow">
 										<svg width="16" height="8" viewBox="0 0 16 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path d="M14.6728 2.74632L12.3508 0.400318C12.295 0.344081 12.2286 0.299445 12.1555 0.268983C12.0824 0.238522 12.004 0.222839 11.9248 0.222839C11.8456 0.222839 11.7672 0.238522 11.694 0.268983C11.6209 0.299445 11.5546 0.344081 11.4988 0.400318C11.387 0.512736 11.3243 0.664807 11.3243 0.823318C11.3243 0.98183 11.387 1.1339 11.4988 1.24632L13.6348 3.40032H1.40078C1.24165 3.40032 1.08904 3.46353 0.976517 3.57605C0.863995 3.68858 0.800781 3.84119 0.800781 4.00032C0.800781 4.15945 0.863995 4.31206 0.976517 4.42458C1.08904 4.5371 1.24165 4.60032 1.40078 4.60032H13.6708L11.4988 6.76632C11.4425 6.8221 11.3979 6.88846 11.3674 6.96157C11.337 7.03469 11.3213 7.11311 11.3213 7.19232C11.3213 7.27153 11.337 7.34995 11.3674 7.42306C11.3979 7.49618 11.4425 7.56254 11.4988 7.61832C11.5546 7.67456 11.6209 7.71919 11.694 7.74965C11.7672 7.78012 11.8456 7.7958 11.9248 7.7958C12.004 7.7958 12.0824 7.78012 12.1555 7.74965C12.2286 7.71919 12.295 7.67456 12.3508 7.61832L14.6728 5.29032C15.0099 4.95282 15.1992 4.49532 15.1992 4.01832C15.1992 3.54132 15.0099 3.08382 14.6728 2.74632Z" fill="#282827"/>
 										</svg>
-									</button>
+									</a>
 								</div>
 							</div>
 							<div class="vacancies__group">
@@ -184,12 +184,12 @@
 									</nav>
 								</div>
 								<div class="vacancies__btns">
-									<button class="vacancies__btn">Откликнуться на вакансию</button>
-									<button class="vacancies__btn2 btn btn-black--arrow">
+									<a href="#form-wrap" class="vacancies__btn">Откликнуться на вакансию</a>
+									<a href="#form-wrap" class="vacancies__btn2 btn btn-black--arrow">
 										<svg width="16" height="8" viewBox="0 0 16 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path d="M14.6728 2.74632L12.3508 0.400318C12.295 0.344081 12.2286 0.299445 12.1555 0.268983C12.0824 0.238522 12.004 0.222839 11.9248 0.222839C11.8456 0.222839 11.7672 0.238522 11.694 0.268983C11.6209 0.299445 11.5546 0.344081 11.4988 0.400318C11.387 0.512736 11.3243 0.664807 11.3243 0.823318C11.3243 0.98183 11.387 1.1339 11.4988 1.24632L13.6348 3.40032H1.40078C1.24165 3.40032 1.08904 3.46353 0.976517 3.57605C0.863995 3.68858 0.800781 3.84119 0.800781 4.00032C0.800781 4.15945 0.863995 4.31206 0.976517 4.42458C1.08904 4.5371 1.24165 4.60032 1.40078 4.60032H13.6708L11.4988 6.76632C11.4425 6.8221 11.3979 6.88846 11.3674 6.96157C11.337 7.03469 11.3213 7.11311 11.3213 7.19232C11.3213 7.27153 11.337 7.34995 11.3674 7.42306C11.3979 7.49618 11.4425 7.56254 11.4988 7.61832C11.5546 7.67456 11.6209 7.71919 11.694 7.74965C11.7672 7.78012 11.8456 7.7958 11.9248 7.7958C12.004 7.7958 12.0824 7.78012 12.1555 7.74965C12.2286 7.71919 12.295 7.67456 12.3508 7.61832L14.6728 5.29032C15.0099 4.95282 15.1992 4.49532 15.1992 4.01832C15.1992 3.54132 15.0099 3.08382 14.6728 2.74632Z" fill="#282827"/>
 										</svg>
-									</button>
+									</a>
 								</div>
 							</div>
 						</div>
@@ -251,7 +251,7 @@
 							</div>
 							<div class="connection2__btns btns">
 								<a href="" class="connection2__btn btn btn-black">
-									<span>Посмотреть все вакансии</span>
+									<span>Узнать больше о компании</span>
 								</a>
 								<a href="" class="connection2__btn2 btn btn-green--arrow">
 									<svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -260,7 +260,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="form-wrap">
+						<div id="form-wrap" class="form-wrap">
 							<h3 class="form-title h3">Отклик на вакансию</h3>
 							<form class="form">
 								<div class="form-grid">
