--- a/vacancies.html
+++ b/vacancies.html
@@ -278,14 +278,23 @@
 									</div>
 								</div>
 								<div class="file">
-									<input type="file" class="input-file">
+									<input type="file" multiple class="input-file">
 									<label class="file-label">
 										<span class="file-title">Припрепите ваше резюме</span>
 										<span class="file-text">Форматы файла: <span>DOC, DOCX, PDF;</span> Не более <span>5 МБ</span></span>
 									</label>
+									<div class="file-info">
+										<div class="file-icon">
+											<img src="img/file-icon.svg" alt="">
+										</div>
+										<div class="file-text2">Файл прикреплен (<span class="file-number">1</span>)</div>
+										<div class="file-icon2">
+											<img src="img/file-icon2.svg" alt="">
+										</div>
+									</div>
 								</div>
 								<div class="form-check">
-									<input type="checkbox" checked="">
+									<input type="checkbox" checked>
 									<label>Я соглашаюсь на обработку моих <a href="">персональных данных</a></label>
 								</div>
 								<button type="button" class="form-btn btn btn-green">
