--- a/about2.html
+++ b/about2.html
@@ -124,7 +124,7 @@
 										<span class="error">Поле не заполнено/заполнено неверно</span>
 									</div>
 									<div class="form-group">
-										<input type="text" placeholder="Фамилия" class="input-name">
+										<input type="text" placeholder="Фамилия" class="notnecessarily">
 										<span class="error">Поле не заполнено/заполнено неверно</span>
 									</div>
 									<div class="form-group">
