--- a/vacancies.html
+++ b/vacancies.html
@@ -250,7 +250,7 @@
 								<p>Если&nbsp;вы&nbsp;увлечены миром выставочного бизнеса и&nbsp;стремитесь к&nbsp;профессиональному росту, присоединяйтесь к&nbsp;нашей команде! Мы&nbsp;ищем талантливых и&nbsp;инициативных людей, готовых внести свой вклад в&nbsp;создание уникальных проектов</p>
 							</div>
 							<div class="connection2__btns btns">
-								<a href="" class="connection2__btn btn btn-black">
+								<a href="about.html" class="connection2__btn btn btn-black">
 									<span>Узнать больше о компании</span>
 								</a>
 								<a href="" class="connection2__btn2 btn btn-green--arrow">
@@ -269,8 +269,7 @@
 										<span class="error">Поле не заполнено/заполнено неверно</span>
 									</div>
 									<div class="form-group">
-										<input type="text" placeholder="Фамилия" class="input-name">
-										<span class="error">Поле не заполнено/заполнено неверно</span>
+										<input type="text" placeholder="Фамилия" class="notnecessarily">
 									</div>
 									<div class="form-group">
 										<input type="email" placeholder="Почта" class="input-email">
