--- a/vacancies.html
+++ b/vacancies.html
@@ -272,7 +272,7 @@
 										<input type="text" placeholder="Фамилия" class="notnecessarily">
 									</div>
 									<div class="form-group">
-										<input type="email" placeholder="Почта" class="input-email">
+										<input type="email" placeholder="Почта" class="input-email necessarily">
 										<span class="error">Поле не заполнено/заполнено неверно</span>
 									</div>
 								</div>
