--- a/about2.html
+++ b/about2.html
@@ -128,7 +128,7 @@
 										<span class="error">Поле не заполнено/заполнено неверно</span>
 									</div>
 									<div class="form-group">
-										<input type="email" placeholder="Почта" class="input-email">
+										<input type="email" placeholder="Почта" class="input-email necessarily">
 										<span class="error">Поле не заполнено/заполнено неверно</span>
 									</div>
 								</div>
