--- a/nav.html
+++ b/nav.html
@@ -54,10 +54,21 @@
 							<li><a href="portfolio-item2.html">Портфолио-проект eng</a></li>
 							<li><a href="news2.html">Новости eng</a></li>
 							<li><a href="news-item2.html">Страница Новости eng</a></li>
-							<li><a href="services2.html">Услуги</a></li>
-							<li><a href="services-item2.html">Эксклюзивные выставочные стенды</a></li>
+							<li><a href="services2.html">Услуги eng</a></li>
+							<li><a href="services-item2.html">Эксклюзивные выставочные стенды eng</a></li>
+							<li><a href="about-eng.html">О компании eng</a></li>
+							<li><a href="about2-eng.html">Команда eng</a></li>
+							<li><a href="vacancies2.html">Вакансии eng</a></li>
+							<li><a href="contacts2.html">Контакты eng</a></li>
+							<li><a href="404-eng.html">404 eng</a></li>
+
 							<li>
 								<button class="btn btn-green" data-modal="contactModal2--eng">
+									<span>Form sent!</span>
+								</button>
+							</li>
+							<li>
+								<button class="btn btn-green" data-modal="contactModal3--eng">
 									<span>Form sent!</span>
 								</button>
 							</li>
@@ -148,7 +159,7 @@
 								<span class="error">Поле не заполнено/заполнено неверно</span>
 							</div>
 							<div class="form-group">
-								<input type="email" placeholder="Почта" class="input-email">
+								<input type="email" placeholder="Почта" class="input-email necessarily">
 								<span class="error">Поле не заполнено/заполнено неверно</span>
 							</div>
 						</div>
@@ -164,6 +175,49 @@
 						</div>
 						<button type="button" class="form-btn btn btn-green">
 							<span>Оставить заявку</span>
+						</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal modal-form3 connection2" id="contactModal3--eng">
+		<div class="modal__dialog">
+			<button type="button" class="_close-modal modal__close" data-bs-dismiss="modal" aria-label="Close">
+				<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M23.7068 0.292787C23.5193 0.105315 23.265 0 22.9998 0C22.7346 0 22.4803 0.105315 22.2928 0.292787L11.9998 10.5858L1.70679 0.292787C1.51926 0.105315 1.26495 0 0.999787 0C0.734622 0 0.480314 0.105315 0.292787 0.292787C0.105315 0.480314 0 0.734622 0 0.999787C0 1.26495 0.105315 1.51926 0.292787 1.70679L10.5858 11.9998L0.292787 22.2928C0.105315 22.4803 0 22.7346 0 22.9998C0 23.265 0.105315 23.5193 0.292787 23.7068C0.480314 23.8943 0.734622 23.9996 0.999787 23.9996C1.26495 23.9996 1.51926 23.8943 1.70679 23.7068L11.9998 13.4138L22.2928 23.7068C22.4803 23.8943 22.7346 23.9996 22.9998 23.9996C23.265 23.9996 23.5193 23.8943 23.7068 23.7068C23.8943 23.5193 23.9996 23.265 23.9996 22.9998C23.9996 22.7346 23.8943 22.4803 23.7068 22.2928L13.4138 11.9998L23.7068 1.70679C23.8943 1.51926 23.9996 1.26495 23.9996 0.999787C23.9996 0.734622 23.8943 0.480314 23.7068 0.292787Z" fill="#282827" />
+				</svg>
+			</button>
+			<div class="modal__content">
+				<div class="form-wrap">
+					<h3 class="form-title h3">Apply for a vacancy</h3>
+					<form class="form">
+						<div class="form-grid">
+							<div class="form-group">
+								<input type="text" placeholder="First Name" class="input-name">
+								<span class="error">Field not filled in/incorrectly filled in</span>
+							</div>
+							<div class="form-group">
+								<input type="text" placeholder="Last Name" class="notnecessarily">
+								<span class="error">Field not filled in/incorrectly filled in</span>
+							</div>
+							<div class="form-group">
+								<input type="email" placeholder="Email" class="input-email necessarily">
+								<span class="error">Field not filled in/incorrectly filled in</span>
+							</div>
+						</div>
+						<div class="form-group2">
+							<div class="form-icon">
+								<img src="img/form-icon.svg" alt="">
+							</div>
+							<div class="form-subtitle">Form sent!</div>
+						</div>
+						<div class="form-check">
+							<input type="checkbox" checked="">
+							<label>I agree to the processing of my <a href="">personal data</a></label>
+						</div>
+						<button type="button" class="form-btn btn btn-green">
+							<span>Submit an application</span>
 						</button>
 					</form>
 				</div>
