--- a/contacts.html
+++ b/contacts.html
@@ -132,6 +132,10 @@
 										<input type="text" placeholder="Имя" class="input-name">
 										<span class="error">Поле не заполнено/заполнено неверно</span>
 									</div>
+									<div class="form-group">
+										<input type="email" placeholder="E-mail" class="input-email">
+										<span class="error">Поле не заполнено/заполнено неверно</span>
+									</div>
 									<div class="country-numbers tabs2">
 										<div class="select-wrap">
 											<ul class="select-head">
@@ -245,19 +249,6 @@
 												<input type="tel" placeholder="0 99 99 99 99" class="input-phone france" inputmode="text">
 												<span class="error">Поле не заполнено/заполнено неверно</span>
 											</div>
-										</div>
-									</div>
-									<div class="form-group">
-										<input type="email" placeholder="E-mail (необязательно)" class="input-email">
-										<span class="error">Поле не заполнено/заполнено неверно</span>
-									</div>
-									<div class="form-group">
-										<input type="text" placeholder="Оставьте сообщение" class="input-text notnecessarily">
-										<div class="file">
-											<input type="file" class="input-file">
-											<label class="file-label">
-												<img src="img/file.svg" alt="">
-											</label>
 										</div>
 									</div>
 									<button type="button" class="form-btn btn btn-green">
