--- a/vacancies2.html
+++ b/vacancies2.html
@@ -268,9 +268,120 @@
 										<input type="text" placeholder="First Name" class="input-name">
 										<span class="error">Field not filled in/incorrectly filled in</span>
 									</div>
-									<div class="form-group">
-										<input type="text" placeholder="Last Name" class="notnecessarily">
-										<span class="error">Field not filled in/incorrectly filled in</span>
+									<div class="country-numbers tabs2">
+										<div class="select-wrap">
+											<ul class="select-head">
+												<li class="select-current">
+													<div class="country-group">
+														<div class="flag">
+															<img src="img/russia.svg" alt="">
+														</div>
+														<div class="country-subgroup">
+															<div class="country-code">+7</div>
+														</div>
+													</div>
+												</li>
+												<li class="select-arrow">
+													<svg width="11" height="6" viewBox="0 0 11 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+														<path d="M9.97354 0.473566C9.91156 0.41108 9.83783 0.361484 9.75659 0.327638C9.67535 0.293793 9.58821 0.276367 9.5002 0.276367C9.4122 0.276367 9.32506 0.293793 9.24382 0.327638C9.16258 0.361484 9.08885 0.41108 9.02687 0.473566L5.97354 3.5269C5.91156 3.58939 5.83783 3.63898 5.75659 3.67283C5.67535 3.70667 5.58821 3.7241 5.5002 3.7241C5.4122 3.7241 5.32506 3.70667 5.24382 3.67283C5.16258 3.63898 5.08884 3.58939 5.02687 3.5269L1.97354 0.473566C1.91156 0.41108 1.83783 0.361484 1.75659 0.327638C1.67535 0.293793 1.58821 0.276367 1.5002 0.276367C1.41219 0.276367 1.32506 0.293793 1.24382 0.327638C1.16258 0.361484 1.08884 0.41108 1.02687 0.473566C0.902702 0.598474 0.833008 0.767442 0.833008 0.943566C0.833008 1.11969 0.902702 1.28866 1.02687 1.41357L4.08687 4.47357C4.46187 4.8481 4.9702 5.05847 5.5002 5.05847C6.0302 5.05847 6.53854 4.8481 6.91354 4.47357L9.97354 1.41357C10.0977 1.28866 10.1674 1.11969 10.1674 0.943566C10.1674 0.767442 10.0977 0.598474 9.97354 0.473566Z" fill="#7D8193"/>
+													</svg>
+												</li>
+											</ul>
+											<ul class="select-body">
+												<li data-tab-path2="1" class="tab2 tab2--active li--active">
+													<div class="country-group">
+														<div class="flag">
+															<img src="img/russia.svg" alt="">
+														</div>
+														<div class="country-subgroup">
+															<div class="country">Russia</div>
+															<div class="country-code">+7</div>
+														</div>
+													</div>
+												</li>
+												<li data-tab-path2="2" class="tab2">
+													<div class="country-group">
+														<div class="flag">
+															<img src="img/BY.svg" alt="">
+														</div>
+														<div class="country-subgroup">
+															<div class="country">Belarus</div>
+															<div class="country-code">+325</div>
+														</div>
+													</div>
+												</li>
+												<li data-tab-path2="3" class="tab2">
+													<div class="country-group">
+														<div class="flag">
+															<img src="img/UA.svg" alt="">
+														</div>
+														<div class="country-subgroup">
+															<div class="country">Ukraine</div>
+															<div class="country-code">+380</div>
+														</div>
+													</div>
+												</li>
+												<li data-tab-path2="4" class="tab2">
+													<div class="country-group">
+														<div class="flag">
+															<img src="img/US.svg" alt="">
+														</div>
+														<div class="country-subgroup">
+															<div class="country">United States</div>
+															<div class="country-code">+1</div>
+														</div>
+													</div>
+												</li>
+												<li data-tab-path2="5" class="tab2">
+													<div class="country-group">
+														<div class="flag">
+															<img src="img/GB.svg" alt="">
+														</div>
+														<div class="country-subgroup">
+															<div class="country">United Kingdom</div>
+															<div class="country-code">+44</div>
+														</div>
+													</div>
+												</li>
+												<li data-tab-path2="6" class="tab2">
+													<div class="country-group">
+														<div class="flag">
+															<img src="img/FR.svg" alt="">
+														</div>
+														<div class="country-subgroup">
+															<div class="country">France</div>
+															<div class="country-code">+33</div>
+														</div>
+													</div>
+												</li>
+											</ul>
+										</div>
+										<div class="country-numbers__inputs">
+											<div data-content-path2="1" class="form-group tab__content2 tab__content2--active">
+												<input type="tel" placeholder="999 999 99-99" class="input-phone russia">
+												<span class="error">Field not filled in/incorrectly filled in</span>
+											</div>
+											<div data-content-path2="2" class="form-group tab__content2">
+												<input type="tel" placeholder="99 999-99-99" class="input-phone belarus">
+												<span class="error">Field not filled in/incorrectly filled in</span>
+											</div>
+											<div data-content-path2="3" class="form-group tab__content2">
+												<input type="tel" placeholder="99 999-99-99" class="input-phone ukraine">
+												<span class="error">Field not filled in/incorrectly filled in</span>
+											</div>
+											<div data-content-path2="4" class="form-group tab__content2">
+												<input type="tel" placeholder="999 999-9999" class="input-phone united-states">
+												<span class="error">Field not filled in/incorrectly filled in</span>
+											</div>
+											<div data-content-path2="5" class="form-group tab__content2">
+												<input type="tel" placeholder="999 999-9999" class="input-phone united-kingdom">
+												<span class="error">Field not filled in/incorrectly filled in</span>
+											</div>
+											<div data-content-path2="6" class="form-group tab__content2">
+												<input type="tel" placeholder="0 99 99 99 99" class="input-phone france">
+												<span class="error">Field not filled in/incorrectly filled in</span>
+											</div>
+										</div>
 									</div>
 									<div class="form-group">
 										<input type="email" placeholder="Email" class="input-email necessarily">
