--- a/index2.html
+++ b/index2.html
@@ -558,55 +558,11 @@
 											<li data-tab-path2="2" class="tab2">
 												<div class="country-group">
 													<div class="flag">
-														<img src="img/BY.svg" alt="">
+														<img src="img/AT.svg" alt="">
 													</div>
 													<div class="country-subgroup">
-														<div class="country">Belarus</div>
-														<div class="country-code">+325</div>
-													</div>
-												</div>
-											</li>
-											<li data-tab-path2="3" class="tab2">
-												<div class="country-group">
-													<div class="flag">
-														<img src="img/UA.svg" alt="">
-													</div>
-													<div class="country-subgroup">
-														<div class="country">Ukraine</div>
-														<div class="country-code">+380</div>
-													</div>
-												</div>
-											</li>
-											<li data-tab-path2="4" class="tab2">
-												<div class="country-group">
-													<div class="flag">
-														<img src="img/US.svg" alt="">
-													</div>
-													<div class="country-subgroup">
-														<div class="country">United States</div>
-														<div class="country-code">+1</div>
-													</div>
-												</div>
-											</li>
-											<li data-tab-path2="5" class="tab2">
-												<div class="country-group">
-													<div class="flag">
-														<img src="img/GB.svg" alt="">
-													</div>
-													<div class="country-subgroup">
-														<div class="country">United Kingdom</div>
-														<div class="country-code">+44</div>
-													</div>
-												</div>
-											</li>
-											<li data-tab-path2="6" class="tab2">
-												<div class="country-group">
-													<div class="flag">
-														<img src="img/FR.svg" alt="">
-													</div>
-													<div class="country-subgroup">
-														<div class="country">France</div>
-														<div class="country-code">+33</div>
+														<div class="country">Austria</div>
+														<div class="country-code">+43</div>
 													</div>
 												</div>
 											</li>
@@ -618,23 +574,7 @@
 											<span class="error">Field not filled in/incorrectly filled in</span>
 										</div>
 										<div data-content-path2="2" class="form-group tab__content2">
-											<input type="tel" placeholder="99 999-99-99" class="input-phone belarus">
-											<span class="error">Field not filled in/incorrectly filled in</span>
-										</div>
-										<div data-content-path2="3" class="form-group tab__content2">
-											<input type="tel" placeholder="99 999-99-99" class="input-phone ukraine">
-											<span class="error">Field not filled in/incorrectly filled in</span>
-										</div>
-										<div data-content-path2="4" class="form-group tab__content2">
-											<input type="tel" placeholder="999 999-9999" class="input-phone united-states">
-											<span class="error">Field not filled in/incorrectly filled in</span>
-										</div>
-										<div data-content-path2="5" class="form-group tab__content2">
-											<input type="tel" placeholder="999 999-9999" class="input-phone united-kingdom">
-											<span class="error">Field not filled in/incorrectly filled in</span>
-										</div>
-										<div data-content-path2="6" class="form-group tab__content2">
-											<input type="tel" placeholder="0 99 99 99 99" class="input-phone france">
+											<input type="tel" placeholder="999 999 99-99" class="input-phone austria">
 											<span class="error">Field not filled in/incorrectly filled in</span>
 										</div>
 									</div>
@@ -1047,55 +987,11 @@
 									<li data-tab-path2="2" class="tab2">
 										<div class="country-group">
 											<div class="flag">
-												<img src="img/BY.svg" alt="">
+												<img src="img/AT.svg" alt="">
 											</div>
 											<div class="country-subgroup">
-												<div class="country">Belarus</div>
-												<div class="country-code">+325</div>
-											</div>
-										</div>
-									</li>
-									<li data-tab-path2="3" class="tab2">
-										<div class="country-group">
-											<div class="flag">
-												<img src="img/UA.svg" alt="">
-											</div>
-											<div class="country-subgroup">
-												<div class="country">Ukraine</div>
-												<div class="country-code">+380</div>
-											</div>
-										</div>
-									</li>
-									<li data-tab-path2="4" class="tab2">
-										<div class="country-group">
-											<div class="flag">
-												<img src="img/US.svg" alt="">
-											</div>
-											<div class="country-subgroup">
-												<div class="country">United States</div>
-												<div class="country-code">+1</div>
-											</div>
-										</div>
-									</li>
-									<li data-tab-path2="5" class="tab2">
-										<div class="country-group">
-											<div class="flag">
-												<img src="img/GB.svg" alt="">
-											</div>
-											<div class="country-subgroup">
-												<div class="country">United Kingdom</div>
-												<div class="country-code">+44</div>
-											</div>
-										</div>
-									</li>
-									<li data-tab-path2="6" class="tab2">
-										<div class="country-group">
-											<div class="flag">
-												<img src="img/FR.svg" alt="">
-											</div>
-											<div class="country-subgroup">
-												<div class="country">France</div>
-												<div class="country-code">+33</div>
+												<div class="country">Austria</div>
+												<div class="country-code">+43</div>
 											</div>
 										</div>
 									</li>
@@ -1107,23 +1003,7 @@
 									<span class="error">Field not filled in/incorrectly filled in</span>
 								</div>
 								<div data-content-path2="2" class="form-group tab__content2">
-									<input type="tel" placeholder="99 999-99-99" class="input-phone belarus">
-									<span class="error">Field not filled in/incorrectly filled in</span>
-								</div>
-								<div data-content-path2="3" class="form-group tab__content2">
-									<input type="tel" placeholder="99 999-99-99" class="input-phone ukraine">
-									<span class="error">Field not filled in/incorrectly filled in</span>
-								</div>
-								<div data-content-path2="4" class="form-group tab__content2">
-									<input type="tel" placeholder="999 999-9999" class="input-phone united-states">
-									<span class="error">Field not filled in/incorrectly filled in</span>
-								</div>
-								<div data-content-path2="5" class="form-group tab__content2">
-									<input type="tel" placeholder="999 999-9999" class="input-phone united-kingdom">
-									<span class="error">Field not filled in/incorrectly filled in</span>
-								</div>
-								<div data-content-path2="6" class="form-group tab__content2">
-									<input type="tel" placeholder="0 99 99 99 99" class="input-phone france">
+									<input type="tel" placeholder="999 999 99-99" class="input-phone austria">
 									<span class="error">Field not filled in/incorrectly filled in</span>
 								</div>
 							</div>
