--- a/nav.html
+++ b/nav.html
@@ -31,10 +31,10 @@
 							<li><a href="vacancies.html">Вакансии</a></li>
 							<li><a href="contacts.html">Контакты</a></li>
 							<li><a href="404.html">404</a></li>
-<!--							<li><a href="privacy%20.html">Политика конфиденциальности</a></li>-->
-<!--							<li><a href="certificates.html">Сертификаты</a></li>-->
-<!--							<li><a href="info.html">Страница пояснение(?)</a></li>-->
-<!--							<li><a href="questions.html">Вопрос-ответ</a></li>-->
+							<li><a href="privacy%20.html">Политика конфиденциальности</a></li>
+							<li><a href="certificates.html">Сертификаты</a></li>
+							<li><a href="info.html">Страница пояснение(?)</a></li>
+							<li><a href="questions.html">Вопрос-ответ</a></li>
 							<li>
 								<button class="btn btn-green" data-modal="contactModal2">
 									<span>Форма отправлена!</span>
@@ -45,7 +45,6 @@
 									<span>Форма отправлена!</span>
 								</button>
 							</li>
-
 
 							<li><br></li>
 
@@ -61,7 +60,10 @@
 							<li><a href="vacancies2.html">Вакансии eng</a></li>
 							<li><a href="contacts2.html">Контакты eng</a></li>
 							<li><a href="404-eng.html">404 eng</a></li>
-
+							<li><a href="privacy2%20.html">Политика конфиденциальности eng</a></li>
+							<li><a href="certificates2.html">Сертификаты eng</a></li>
+							<li><a href="info2.html">Страница пояснение(?) eng</a></li>
+							<li><a href="questions2.html">Вопрос-ответ eng</a></li>
 							<li>
 								<button class="btn btn-green" data-modal="contactModal2--eng">
 									<span>Form sent!</span>
