--- a/info.html
+++ b/info.html
@@ -242,6 +242,108 @@
 </footer>
 	</div>
 
+	<div class="modal modal-form" id="contactModal">
+		<div class="modal__dialog">
+			<button type="button" class="_close-modal modal__close" data-bs-dismiss="modal" aria-label="Close">
+				<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M23.7068 0.292787C23.5193 0.105315 23.265 0 22.9998 0C22.7346 0 22.4803 0.105315 22.2928 0.292787L11.9998 10.5858L1.70679 0.292787C1.51926 0.105315 1.26495 0 0.999787 0C0.734622 0 0.480314 0.105315 0.292787 0.292787C0.105315 0.480314 0 0.734622 0 0.999787C0 1.26495 0.105315 1.51926 0.292787 1.70679L10.5858 11.9998L0.292787 22.2928C0.105315 22.4803 0 22.7346 0 22.9998C0 23.265 0.105315 23.5193 0.292787 23.7068C0.480314 23.8943 0.734622 23.9996 0.999787 23.9996C1.26495 23.9996 1.51926 23.8943 1.70679 23.7068L11.9998 13.4138L22.2928 23.7068C22.4803 23.8943 22.7346 23.9996 22.9998 23.9996C23.265 23.9996 23.5193 23.8943 23.7068 23.7068C23.8943 23.5193 23.9996 23.265 23.9996 22.9998C23.9996 22.7346 23.8943 22.4803 23.7068 22.2928L13.4138 11.9998L23.7068 1.70679C23.8943 1.51926 23.9996 1.26495 23.9996 0.999787C23.9996 0.734622 23.8943 0.480314 23.7068 0.292787Z" fill="#282827" />
+				</svg>
+			</button>
+			<div class="modal__content connection__inner">
+				<div class="connection__desc">
+					<h2 class="connection__title h2">Запросите консультацию сегодня</h2>
+					<div class="connection__text">Заполните форму, и наши специалисты свяжутся с вами в ближайшее время
+						для бесплатной консультации. Мы поможем вам найти оптимальное решение и реализовать ваши идеи на высшем
+						уровне!</div>
+				</div>
+				<div class="form-wrap">
+					<div class="form-title">Свяжитесь с нами. Мы готовы ответить на любые ваши вопросы</div>
+					<form class="form">
+						<div class="form-group">
+							<input type="text" placeholder="Имя" class="input-name">
+							<span class="error">Поле не заполнено/заполнено неверно</span>
+						</div>
+						<div class="country-numbers tabs2">
+							<div class="select-wrap">
+								<ul class="select-head">
+									<li class="select-current">
+										<div class="country-group">
+											<div class="flag">
+												<img src="img/russia.svg" alt="">
+											</div>
+											<div class="country-subgroup">
+												<div class="country-code">+7</div>
+											</div>
+										</div>
+									</li>
+									<li class="select-arrow">
+										<svg width="11" height="6" viewBox="0 0 11 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M9.97354 0.473566C9.91156 0.41108 9.83783 0.361484 9.75659 0.327638C9.67535 0.293793 9.58821 0.276367 9.5002 0.276367C9.4122 0.276367 9.32506 0.293793 9.24382 0.327638C9.16258 0.361484 9.08885 0.41108 9.02687 0.473566L5.97354 3.5269C5.91156 3.58939 5.83783 3.63898 5.75659 3.67283C5.67535 3.70667 5.58821 3.7241 5.5002 3.7241C5.4122 3.7241 5.32506 3.70667 5.24382 3.67283C5.16258 3.63898 5.08884 3.58939 5.02687 3.5269L1.97354 0.473566C1.91156 0.41108 1.83783 0.361484 1.75659 0.327638C1.67535 0.293793 1.58821 0.276367 1.5002 0.276367C1.41219 0.276367 1.32506 0.293793 1.24382 0.327638C1.16258 0.361484 1.08884 0.41108 1.02687 0.473566C0.902702 0.598474 0.833008 0.767442 0.833008 0.943566C0.833008 1.11969 0.902702 1.28866 1.02687 1.41357L4.08687 4.47357C4.46187 4.8481 4.9702 5.05847 5.5002 5.05847C6.0302 5.05847 6.53854 4.8481 6.91354 4.47357L9.97354 1.41357C10.0977 1.28866 10.1674 1.11969 10.1674 0.943566C10.1674 0.767442 10.0977 0.598474 9.97354 0.473566Z" fill="#7D8193"/>
+										</svg>
+									</li>
+								</ul>
+								<ul class="select-body">
+									<li data-tab-path2="1" class="tab2 tab2--active li--active">
+										<div class="country-group">
+											<div class="flag">
+												<img src="img/russia.svg" alt="">
+											</div>
+											<div class="country-subgroup">
+												<div class="country">Russia</div>
+												<div class="country-code">+7</div>
+											</div>
+										</div>
+									</li>
+									<li data-tab-path2="2" class="tab2">
+										<div class="country-group">
+											<div class="flag">
+												<img src="img/AT.svg" alt="">
+											</div>
+											<div class="country-subgroup">
+												<div class="country">Austria</div>
+												<div class="country-code">+43</div>
+											</div>
+										</div>
+									</li>
+								</ul>
+							</div>
+							<div class="country-numbers__inputs">
+								<div data-content-path2="1" class="form-group tab__content2 tab__content2--active">
+									<input type="tel" placeholder="999 999 99-99" class="input-phone russia">
+									<span class="error">Поле не заполнено/заполнено неверно</span>
+								</div>
+								<div data-content-path2="2" class="form-group tab__content2">
+									<input type="tel" placeholder="999 999 99-99" class="input-phone austria">
+									<span class="error">Поле не заполнено/заполнено неверно</span>
+								</div>
+							</div>
+						</div>
+						<div class="form-group">
+							<input type="email" placeholder="E-mail (необязательно)" class="input-email">
+							<span class="error">Поле не заполнено/заполнено неверно</span>
+						</div>
+						<div class="form-group">
+							<input type="text" placeholder="Оставьте сообщение" class="input-text notnecessarily">
+							<div class="file">
+								<input type="file" class="input-file">
+								<label class="file-label">
+									<img src="img/file.svg" alt="">
+								</label>
+							</div>
+						</div>
+						<button type="button" class="form-btn btn btn-green">
+							<span>Оставить заявку</span>
+						</button>
+						<div class="form-check">
+							<input type="checkbox" checked>
+							<label>Отправляя заявку, Вы принимаете <a href="">условия публичных соглашений</a></label>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
 <script src="js/libs.min.js"></script>
