--- a/contacts.html
+++ b/contacts.html
@@ -299,8 +299,8 @@
                 </div>
                 <div class="footer__text2">
                     <p>©2025 ЕВРОЭКСПОСТЕНД</p>
-                    <p><a href="">Политика конфиденциальности</a></p>
-                    <p><a href="">Собственные мероприятия</a></p>
+                    <p><a href="privacy%20.html">Политика конфиденциальности</a></p>
+                    <p><a href="https://euroexpo.ru/services/own-events/">Собственные мероприятия</a></p>
                 </div>
             </div>
         </div>
