--- a/index2.html
+++ b/index2.html
@@ -32,23 +32,23 @@
 								</a>
 								<div class="header-item__hidden">
 									<ul class="header-item__list">
-										<li><a href="">About the Company</a></li>
-										<li><a href="">About the Company</a></li>
-										<li><a href="">About the Company</a></li>
+										<li><a href="about-eng.html">About the Company</a></li>
+										<li><a href="about-eng.html">About the Company</a></li>
+										<li><a href="about-eng.html">About the Company</a></li>
 									</ul>
 								</div>
 							</li>
-							<li><a href="">Services</a></li>
-							<li><a href="">Portfolio</a></li>
+							<li><a href="services2.html">Services</a></li>
+							<li><a href="portfolio2.html">Portfolio</a></li>
 						</ul>
 						<a class="header__logo" href="index.html">
 							<img src="img/logo-eng.svg" alt="">
 						</a>
 						<div class="header__group">
 							<ul class="header__list">
-								<li><a href="">News</a></li>
-								<li><a href="">Team</a></li>
-								<li><a href="">Vacancies</a></li>
+								<li><a href="news2.html">News</a></li>
+								<li><a href="about2-eng.html">Team</a></li>
+								<li><a href="contacts2.html">Contacts</a></li>
 							</ul>
 							<div class="header__languages">
 								<a href="index.html" class="header__language">
@@ -905,23 +905,23 @@
 							</div>
 							<div class="footer-bottom__right">
 								<ul class="footer__list">
-									<li><a href="">About the Company</a></li>
-									<li><a href="">Services</a></li>
-									<li><a href="">Portfolio</a></li>
-									<li><a href="">News</a></li>
+									<li><a href="about-eng.html">About the Company</a></li>
+									<li><a href="services2.html">Services</a></li>
+									<li><a href="portfolio2.html">Portfolio</a></li>
+									<li><a href="news2.html">News</a></li>
 								</ul>
 								<ul class="footer__list">
-									<li><a href="">Team</a></li>
-									<li><a href="">Vacancies</a></li>
-									<li><a href="">Contacts</a></li>
-									<li><a href="">FAQ</a></li>
+									<li><a href="about2-eng.html">Team</a></li>
+									<li><a href="vacancies2.html">Vacancies</a></li>
+									<li><a href="contacts2.html">Contacts</a></li>
+									<li><a href="questions2.html">FAQ</a></li>
 								</ul>
 							</div>
 						</div>
 						<div class="footer__text2">
 							<p>©EUROEXPOSTAND</p>
-							<p><a href="">Politicy</a></p>
-							<p><a href="">Proprietary events</a></p>
+							<p><a href="privacy2 .html">Politicy</a></p>
+							<p><a href="https://euroexpo.ru/services/own-events/">Proprietary events</a></p>
 						</div>
 					</div>
 				</div>
