--- a/portfolio.html
+++ b/portfolio.html
@@ -4084,7 +4084,8 @@
                 <div class="footer__text2">
                     <p>©2025 ЕВРОЭКСПОСТЕНД</p>
                     <p><a href="privacy%20.html">Политика конфиденциальности</a></p>
-                    <p><a href="https://euroexpo.ru/services/own-events/">Собственные мероприятия</a></p>
+                    <p><a href="https://euroexpo.ru/services/own-events/" target="_blank">Собственные мероприятия</a>
+                    </p>
                 </div>
             </div>
         </div>
