--- a/vacancies2.html
+++ b/vacancies2.html
@@ -289,6 +289,9 @@
 										<input type="text" placeholder="First Name" class="input-name">
 										<span class="error">Field not filled in/incorrectly filled in</span>
 									</div>
+									<div class="form-group">
+										<input type="text" placeholder="Last Name" class="input-surname">
+									</div>
 									<div class="country-numbers tabs2">
 										<div class="select-wrap">
 											<ul class="select-head">
@@ -475,7 +478,7 @@
 						<div class="footer__text2">
 							<p>©EUROEXPOSTAND</p>
 							<p><a href="privacy2 .html">Politicy</a></p>
-							<p><a href="https://euroexpo.ru/services/own-events/">Proprietary events</a></p>
+							<p><a target="_blank" href="https://euroexpo.ru/services/own-events/">Proprietary events</a></p>
 						</div>
 					</div>
 				</div>
