--- a/news2.html
+++ b/news2.html
@@ -1591,7 +1591,7 @@
 						<div class="footer__text2">
 							<p>©EUROEXPOSTAND</p>
 							<p><a href="privacy2 .html">Politicy</a></p>
-							<p><a href="https://euroexpo.ru/services/own-events/">Proprietary events</a></p>
+							<p><a target="_blank" href="https://euroexpo.ru/services/own-events/">Proprietary events</a></p>
 						</div>
 					</div>
 				</div>
